k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: authors-books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:

      # 🔹 WAIT FOR MYSQL SERVICE
      containers:
      - name: backend
        image: 426192960096.dkr.ecr.us-east-1.amazonaws.com/authors-books-backend:latest
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: authors-books
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
