k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: authors-books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: 426192960096.dkr.ecr.us-east-1.amazonaws.com/authors-books-mysql:latest
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: authors-books
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
